[package]
name = "zanderlewis"
version = "0.0.1"
edition = "2021"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
repository = "https://github.com/zanderlewis/zanderlewis-card"
description = "My profile card as a rust crate."
license = "MIT"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
